Fix some issues reported by Android lint